fixed broken layout due to late breakpoint

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -201,7 +201,7 @@ footer .dropdown-menu{
 
  
 /*Large Mobile styling - Medium Tablet*/
-@media  (min-width: 500px) and (max-width: 830px) {
+@media  (min-width: 500px) and (max-width: 880px) {
   .mini-footer {
     display: block;
   }
